# v1026-demo-app

./: .gitmodules  Cargo.toml  README.md  bitbucket-pipelines.yml  build.rs  debug.sh  release.sh  udp_wrapper.py
.cargo/: config
src/: main.rs  secrets.rs
